// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddAddressButton> renders the component 1`] = `
<DocumentFragment>
  <button
    aria-label="Add an address"
    class="root"
  >
    <span
      class="icon"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="3"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="16"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
    </span>
    <span
      class="label"
    >
      Add an address
    </span>
  </button>
</DocumentFragment>
`;

exports[`<AddAddressButton> renders the component with list display type 1`] = `
<DocumentFragment>
  <button
    aria-label="Add an address"
    class="list"
  >
    <span
      class="icon"
    >
      <svg
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="3"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="16"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
    </span>
    <span
      class="label"
    >
      Add an address
    </span>
  </button>
</DocumentFragment>
`;
